--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
     }
   </style>
 </head>
+<meta name="google-site-verification" content="6qcwYwzA6RaAwLVA6G3HBTprB8Bdw4A16uZCF5e9Ar8" />
 <body>
 
 <div class="container">
